# TecCloud

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yaml
config/: postgres.env  rabbitmq.env
teccloud-api/: .dockerignore  .gitignore  Dockerfile  dev.env  package.json  tsconfig.json
teccloud-api/@types/express/: index.d.ts
teccloud-api/src/: main.ts
teccloud-api/src/config/: index.ts
teccloud-api/src/db/: file.ts  fileaccess.ts  folder.ts  index.ts  models.ts  page.ts  user.ts
teccloud-api/src/middleware/: auth.ts  customError.ts  shareChecks.ts
teccloud-api/src/queue/: index.ts
teccloud-api/src/utils/: encoding.ts  files.ts
teccloud-rust-worker/: Cargo.toml  Dockerfile
teccloud-rust-worker/src/: config.rs  file_info.rs  main.rs  shutdown_signal.rs
teccloud-rust-worker/src/conn/: mod.rs  postgres.rs  rabbitmq.rs  wait_for_connections.rs
teccloud-rust-worker/src/process/: image.rs  libreoffice.rs  mod.rs  pdf.rs  text.rs
teccloud-server/: Dockerfile  next.config.js  package.json  types.d.ts
teccloud-server/components/: DeleteFileModal.tsx  DeleteFolderModal.tsx  FileModal.tsx  FolderModal.tsx  Login.tsx  ReplaceFileModal.tsx  SignUp.tsx  SingleFile.tsx  SingleFolder.tsx  SinglePage.tsx  UploadModal.tsx  UploadStatusDialog.tsx
teccloud-server/components/Scaffold/: SearchBar.tsx  Sidebar.tsx  SidebarAddFolder.tsx  SidebarItem.tsx  SidebarLogout.tsx  SidebarUpload.tsx  index.tsx
teccloud-server/components/ShareDialog/: GeneralAccessSelect.tsx  ShareWithBar.tsx  UserAccessItem.tsx  UserAccessList.tsx  index.tsx
teccloud-server/config/: index.ts
teccloud-server/lib/: uploadCallback.ts
teccloud-server/pages/: _app.tsx  files.tsx  index.tsx  login.tsx  settings.tsx  shared.tsx  sign_up.tsx
teccloud-server/pages/api/: hello_from_api.ts
teccloud-shared-rust/: Cargo.toml
teccloud-shared-rust/src/: config.rs  file_info.rs  lib.rs
teccloud-shared-rust/src/conn/: postgres.rs  rabbitmq.rs  wait_for_connections.rs
teccloud-text-extractor/: Cargo.toml  Dockerfile
teccloud-text-extractor/src/: extractor.rs  main.rs
teccloud-thumbnail-generator/: Cargo.toml  Dockerfile
teccloud-thumbnail-generator/src/: main.rs
(+10 files in other folders)
