[package]
name = "teccloud-rust-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
encoding_rs = "0.8"
futures-lite = "1.12"
lapin = "2.1"
nohash-hasher = "0.2"
poppler-rs = "0.20"
postgres-types = { version = "0.2", features = ["derive"] }
serde_json = "1.0"
tesseract = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2.1"
tokio-postgres = "0.7"
tokio-reactor-trait = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
