[package]
name = "teccloud-thumbnail-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-lite = "1.12"
lapin = "2.1"
teccloud-shared-rust = { path = "../teccloud-shared-rust" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
